--- a/links.html
+++ b/links.html
@@ -25,7 +25,7 @@
             <h1>Find Me Online</h1>
             <ul>
                 <li><a href="https://github.com/Torxtoise" target="_blank">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/tushar-tiwari" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/tushar-tiwari-96422b222/" target="_blank">LinkedIn</a></li>
                 <li><a href="https://wittushar.wordpress.com/?_gl=1*1bafnsw*_gcl_au*NTE3NjEwMDc3LjE3NDE1OTc3MDM." target="_blank">Blogs</a></li>
             </ul>
         </div>
